--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 description = ""
 authors = ["Youngsuk Lee <lee.youngsuk@gmail.com>"]
 readme = "README.md"
-packages = [{include = "tfaa", from = "src"}]
+packages = [{include = "tfaa", from = "src/python"}]
 
 
 [tool.poetry.dependencies]
@@ -16,6 +16,8 @@ autopep8 = "^2.0.1"
 pandas = "^1.5.3"
 requests = "^2.28.2"
 python-binance = "^1.0.16"
+pydantic = "^1.10.7"
+pydantic-mongo = "^1.0.1"
 
 
 [build-system]
